Colaboratory를 통해 생성됨

--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRevNJSYBDx+Hm3U2FEosF",
+      "authorship_tag": "ABX9TyMRmfSrEEFWTYt4UuXXLa+X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,10 +369,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "산술연산자 : + 더하기(print(4+3)), - 빼기(print(2-1)), * 곱하기(print(5*4)), / 나누기(print(4/2)), % 나머지 print(5 % 2), // 몪 print(6 // 2), ** 거듭제곱 print(4**2)"
+        "산술연산자 : + 더하기(print(4+3)), - 빼기 (print(2-1)), * 곱하기(print(5*4)). / 나누기(print(4/2)), % 나머지 print(5 % 2), // 몪 print(6 // 2), ** 거듭제곱 print(4 ** 2)"
       ],
       "metadata": {
-        "id": "K8KfXg9N7bAs"
+        "id": "iPjBhxuv-TNY"
       }
     }
   ]
