Colaboratory를 통해 생성됨

--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPy3/S2Q3GXS20Z46TLfKmw",
+      "authorship_tag": "ABX9TyNRqEpneF5LOVtXry1uThM8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,11 +369,54 @@
     {
       "cell_type": "markdown",
       "source": [
-        "산술연산자 : + 더하기(print(4+3)), - 빼기 (print(2-1)), * 곱하기(print(5 * 4)). / 나누기(print(4/2)), % 나머지 print(5 % 2), // 몪 print(6 // 2),**거듭제곱 print((4 ** (2))"
+        "산술연산자 : + 더하기(print(4+3)), - 빼기 (print(2-1)), 곱하기(print(5 * 4)) **. / 나누기(print(4/2)), % 나머지 print(5 % 2), // 몪 print(6 // 2),**거듭제곱 print((4 ** (2)) **굵은 텍스트**"
       ],
       "metadata": {
         "id": "iPjBhxuv-TNY"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello World!\")\n",
+        "print(\"안녕하세요?\")\n",
+        "print(\"programming에 입문하신 것을 축하드립니다.\")\n",
+        "print(2+3)\n",
+        "print(2-3)\n",
+        "print(2*3)\n",
+        "print(2/3)\n",
+        "print(2345*9876-5678)\n",
+        "print(123456789123456789 * 1234567891234565789)\n",
+        "print(3.141592 * 10.0 * 10.0)\n",
+        "print(1/100*1234)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u_4gbRyYD-jj",
+        "outputId": "9c7e2e71-8a1b-4d85-fe71-b39118226c05"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!\n",
+            "안녕하세요?\n",
+            "programming에 입문하신 것을 축하드립니다.\n",
+            "5\n",
+            "-1\n",
+            "6\n",
+            "0.6666666666666666\n",
+            "23153542\n",
+            "152415787806736525773512259119191521\n",
+            "314.1592\n",
+            "12.34\n"
+          ]
+        }
+      ]
     }
   ]
 }
