--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRqEpneF5LOVtXry1uThM8",
+      "authorship_tag": "ABX9TyMrEPeMLgYbT4+rx5kxQj5k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,7 +369,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "산술연산자 : + 더하기(print(4+3)), - 빼기 (print(2-1)), 곱하기(print(5 * 4)) **. / 나누기(print(4/2)), % 나머지 print(5 % 2), // 몪 print(6 // 2),**거듭제곱 print((4 ** (2)) **굵은 텍스트**"
+        "산술연산자 : + 더하기(print(4+3)), - 빼기 (print(2-1)), 곱하기(print(5 * 4)) **. / 나누기(print(4/2)), % 나머지 print(5 % 2), // 몪 print(6 // 2), ** * 거듭제곱 print(4 ** 2)"
       ],
       "metadata": {
         "id": "iPjBhxuv-TNY"
