Colaboratory를 통해 생성됨

--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrEPeMLgYbT4+rx5kxQj5k",
+      "authorship_tag": "ABX9TyM2cAD50fneMCRrvxI8jYpD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -414,6 +414,205 @@
             "152415787806736525773512259119191521\n",
             "314.1592\n",
             "12.34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " x = int(input(\"첫 번째 정수를 입력하시오. :\"))\n",
+        " y = int(input(\"두 번째 정수를 입력하시오. :\"))\n",
+        " sum = x + y \n",
+        " print(x, \"과\", y, \"의 합은\", sum, \"입니다.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s2sXFV5eJVNt",
+        "outputId": "7d5089af-6353-43df-f605-56f5f009ec89"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "첫 번째 정수를 입력하시오. :100\n",
+            "두 번째 정수를 입력하시오. :200\n",
+            "100 과 200 의 합은 300 입니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input(\"이름을 입력하시오:\")\n",
+        "print(name, \"씨, 안녕하세요?\")\n",
+        "print(\"파이썬에 오신 것을 환영합니다.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "imQzIaG7KhfX",
+        "outputId": "c0fc75fe-e93c-469f-8dfa-a48cfc8a93ff"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름을 입력하시오:홍길동\n",
+            "홍길동 씨, 안녕하세요?\n",
+            "파이썬에 오신 것을 환영합니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "street = \"서울시 종로구\"\n",
+        "type = \"아파트\"\n",
+        "number_of_rooms = 3\n",
+        "price = 100000000\n",
+        "\n",
+        "print(\"#\" * 31)\n",
+        "print(\"#                             #\")\n",
+        "print(\"#  부동산 매물 광고  #\")\n",
+        "print(\"#                             #\")\n",
+        "print(\"#\" * 31)\n",
+        "print(\"\")\n",
+        "print(street, \"에 위치한 아주 좋은\", type, \"가 매물로 나왔습니다. 이\", type, \"는 \", number_of_rooms, \" 개의 방을 가지고 있으며 가격은\", price, \"입니다.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yuq51eb3L-ro",
+        "outputId": "10788162-021e-4b24-fd35-d975a474e8c2"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "###############################\n",
+            "#                             #\n",
+            "#  부동산 매물 광고  #\n",
+            "#                             #\n",
+            "###############################\n",
+            "\n",
+            "서울시 종로구 에 위치한 아주 좋은 아파트 가 매물로 나왔습니다. 이 아파트 는  3  개의 방을 가지고 있으며 가격은 100000000 입니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input(\"이름을 입력하시오:\")\n",
+        "age = int(input(\"나이를 입력하시오:\"))\n",
+        "year = 2022 + 100 - age\n",
+        "print(name,\"씨는 \", year, \"년에 100살이시네요!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PJRJLkYRRamD",
+        "outputId": "aa4b2135-0a65-4b4d-8283-4af30aed9007"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름을 입력하시오:홍길동\n",
+            "나이를 입력하시오:20\n",
+            "홍길동 씨는  2102 년에 100살이시네요!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = int(input(\"첫 번째 숫자를 입력해주세요 : \"))\n",
+        "y = int(input(\"두 번째 숫자를 입력해주세요 : \"))\n",
+        "z = int(input(\"세 번째 숫자를 입력해주세요 : \"))\n",
+        "avg = (x+y+z)/3\n",
+        "print(x, y, z, \"의 평균은\", avg, \"입니다.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bEWegQKYWIOG",
+        "outputId": "9913128d-dd90-4ef1-82f0-ab99ba276d05"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "첫 번째 숫자를 입력해주세요 : 10\n",
+            "두 번째 숫자를 입력해주세요 : 20\n",
+            "세 번째 숫자를 입력해주세요 : 30\n",
+            "10 20 30 의 평균은 20.0 입니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "radius = 50\n",
+        "\n",
+        "import turtle\n",
+        "t = Turtle()\n",
+        "t.shape(\"turtle\")\n",
+        "\n",
+        "t.goto(0,0)\n",
+        "t.circle(radius)\n",
+        "t.up()\n",
+        "t.goto(100,0)\n",
+        "t.down()\n",
+        "radius = radius + 20\n",
+        "t.circle(radius)\n",
+        "t.up()\n",
+        "t.goto(200,0)\n",
+        "t.down()\n",
+        "radius = radius + 20\n",
+        "radius = radius\n",
+        "t.circle(radius)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 248
+        },
+        "id": "i2iaqkZ-ZVp4",
+        "outputId": "49d0f0a2-7ecd-4d5d-8747-99a191db45e7"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-48-7df603839ae8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mturtle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTurtle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"turtle\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Turtle' is not defined"
           ]
         }
       ]
