Colaboratory를 통해 생성됨

--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrH6rNHjalXtGgQ2iHxtiZ",
+      "authorship_tag": "ABX9TyPvulwyxAsLN0BDqxHigBCy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -680,13 +680,13 @@
       ],
       "metadata": {
         "id": "rUxVGfJXIKay",
+        "outputId": "210861f7-2137-4b40-e07c-83bcf7948d44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 400
-        },
-        "outputId": "210861f7-2137-4b40-e07c-83bcf7948d44"
+        }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -705,6 +705,54 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = int(input(\"섭씨를 입력해주세요.\"))\n",
+        "y = x*(9/5) +32\n",
+        "print(f'화씨는 {y}F 입니다.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r4j_431rV0nU",
+        "outputId": "a395bea3-cad7-4a02-a1ee-2bb8e8be75ca"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "섭씨를 입력해주세요.5\n",
+            "화씨는 41.0F 입니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "product = input(\"물건값을 입력하시오: \");\n",
+        "won1000c = input(\"1000원 지폐개수: \");\n",
+        "won"
+      ],
+      "metadata": {
+        "id": "Ay3r_x_dZGHY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RJzMbfIDY5zx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
