Colaboratory를 통해 생성됨

--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvulwyxAsLN0BDqxHigBCy",
+      "authorship_tag": "ABX9TyOsPVyWSDD1VhX9AbGJijxP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -737,13 +737,42 @@
       "source": [
         "product = input(\"물건값을 입력하시오: \");\n",
         "won1000c = input(\"1000원 지폐개수: \");\n",
-        "won"
+        "won500c = input(\"500원 동전개수: \");\n",
+        "won100c = input(\"100원 동전개수: \");\n",
+        "print(\"==========================\")\n",
+        "won1000 = int(won1000c)*1000;\n",
+        "won500 = int(won500c)*500;\n",
+        "won100 = int(won100c)*100;\n",
+        "money = won1000 + won500 + won100;\n",
+        "money = int(money) - int(product);\n",
+        "return500 = money//500;\n",
+        "money = money%500;\n",
+        "return100 = money//100;\n",
+        "money = money%100;\n",
+        "return10 = money //10;\n",
+        "money = money%10;\n",
+        "return1 = money//1;\n",
+        "print(\"500원: \"+str(return500)+\", 100원: \"+str(return100)+\", 10원: \"+str(return10)+\", 1원: \"+str(return1);"
       ],
       "metadata": {
-        "id": "Ay3r_x_dZGHY"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "id": "Ay3r_x_dZGHY",
+        "outputId": "cdc1c42b-7d76-4e44-f241-093ec3e2437d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-ed3f5cda6ee2>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    print(\"500원: \"+str(return500)+\", 100원: \"+str(return100)+\", 10원: \"+str(return10)+\", 1원: \"+str(return1);\u001b[0m\n\u001b[0m                                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
