Colaboratory를 통해 생성됨

--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMK7dIIqqqkfsoXzO+ApQph",
+      "authorship_tag": "ABX9TyOl4fQVpKLIUw+r2E+T/0b4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -822,12 +822,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = 10\n",
+        "print(\"x=\", x)\n",
+        "x=3.14\n",
+        "print(\"x=\", x)\n",
+        "x = \"Hello World!\"\n",
+        "print(\"x=\",x)"
+      ],
       "metadata": {
-        "id": "va-4WqByeplZ"
+        "id": "va-4WqByeplZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fc68193a-2c60-4a49-8359-f0d1205ad5a4"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x= 10\n",
+            "x= 3.14\n",
+            "x= Hello World!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
