Colaboratory를 통해 생성됨

--- a/Python_1.ipynb
+++ b/Python_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOl4fQVpKLIUw+r2E+T/0b4",
+      "authorship_tag": "ABX9TyNgWm4ENfhK3qo5mWpJNLYZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -852,21 +852,118 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = input(\"정수를 입력하시오: \")\n",
+        "y = input(\"정수를 입력하시오: \")\n",
+        "print(x+y)"
+      ],
       "metadata": {
-        "id": "7h3MjWdUeqaX"
+        "id": "7h3MjWdUeqaX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "911456da-b581-4336-b7c9-96a40df343a9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수를 입력하시오: 100\n",
+            "정수를 입력하시오: 200\n",
+            "100200\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = int( input(\"정수를 입력하시오: \"))\n",
+        "y = int(input(\"정수를 입력하시오: \"))\n",
+        "print(x+y)"
+      ],
       "metadata": {
-        "id": "RJzMbfIDY5zx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CsTuPcWHTYZ3",
+        "outputId": "17dcb965-a8da-4d8d-a088-d10c50115e72"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수를 입력하시오: 100\n",
+            "정수를 입력하시오: 200\n",
+            "300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t =input(\"정수를 입력하시오: \")\n",
+        "x = int(t)\n",
+        "t = input(\"정수를 입력하시오: \")\n",
+        "y = int(t)\n",
+        "print(x+y)"
+      ],
+      "metadata": {
+        "id": "RJzMbfIDY5zx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a0586932-5470-4389-ef0c-03cf6b94ec20"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수를 입력하시오: 100\n",
+            "정수를 입력하시오: 200\n",
+            "300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "t = redefine"
+      ],
+      "metadata": {
+        "id": "Yl_YrcTsVm1d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('나는 현재'+str(21) + '살이다.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0SGuiIrPWll1",
+        "outputId": "ef8a9323-f3b8-4e99-8264-37977635b9b0"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "나는 현재21살이다.\n"
+          ]
+        }
+      ]
     }
   ]
 }
