--- a/basic_python221028.ipynb
+++ b/basic_python221028.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWWiWXOyCLBEJ1ChHpqcvG",
+      "authorship_tag": "ABX9TyNiyXBNvUu8e/x+oZ9uF83a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/parkdongseop/-basic-python-2022-2-2200257-google-colab/blob/main/basic_python221028.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3장 연습문제 eclass 박동섭 "
+      ],
+      "metadata": {
+        "id": "Pe6GLvQrdnPz"
+      }
     },
     {
       "cell_type": "code",
@@ -92,6 +101,84 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = int(input(\"정수를 입력하시오.: \"))\n",
+        "\n",
+        "sum = 0 #코딩에서는 초기화가 중요함 initialized 내장함수\n",
+        "sum = sum + number % 10\n",
+        "number = number // 10\n",
+        "\n",
+        "sum = sum + number % 10\n",
+        "number = number // 10\n",
+        "\n",
+        "sum = sum + number %10\n",
+        "number = number // 10\n",
+        "\n",
+        "sum = sum + number % 10\n",
+        "number = number // 10\n",
+        "\n",
+        "print(\"자리수의 합은: \", str(sum) ) #반복문 사용은 자제해보자 \n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n1bTzk7desSY",
+        "outputId": "e4535945-e1db-46ef-d57f-40c3b6832749"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수를 입력하시오.: 1234\n",
+            "자리수의 합은:  10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x1 = int(input(\"x1의 값을 입력하시오.: \"))\n",
+        "x2 = int(input(\"x2의 값을 입력하시오.: \"))\n",
+        "y1 = int(input(\"y1의 값을 입력하시오.: \"))\n",
+        "y2 = int(input(\"y2의 값을 입력하시오.: \"))\n",
+        "dist = ((x2 - x1 **2 + (y2 - y1) **2) ** 0.5\n",
+        "print(\"두 점의 사이의 거리는?\", dist, \"입니다.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        },
+        "id": "Wii37IwLhJUG",
+        "outputId": "be9d0130-160e-40b3-c8b5-0eb4ba45da62"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-9ec54e65f963>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    print(\"두 점의 사이의 거리는?\", dist, \"입니다.\")\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "--Id4nKXlP8r"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
